# komodo-defi-framework

./: .gitignore  :wq  CHANGELOG.md  Cargo.toml  MM_DATETIME  README.md  clippy.toml  rust-toolchain.toml
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  hd_pubkey.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  sia.rs  siacoin.rs  solana.rs  streaming_events_config.rs  swap_features.rs  test_coin.rs  utxo.rs  watcher_common.rs  z_coin.rs
mm2src/coins/eth/: activation.rs  eip1559_gas_fee.rs  erc1155_abi.json  erc20.rs  erc721_abi.json  eth_balance_events.rs  eth_errors.rs  eth_gas.rs  eth_hd_wallet.rs  eth_rpc.rs  eth_swap_v2.rs  eth_tests.rs  eth_utils.rs  eth_wasm_tests.rs  eth_watcher.rs  eth_withdraw.rs  fee_estimator.rs  for_tests.rs  v2_activation.rs  wallet_connect.rs
mm2src/coins/eth/eth_swap_v2/: eth_maker_swap_v2.rs  eth_taker_swap_v2.rs  mod.rs
mm2src/coins/eth/fee_estimation/: eth_fee_events.rs  mod.rs  rpc.rs  ser.rs
mm2src/coins/eth/nft_swap_v2/: errors.rs  mod.rs
mm2src/coins/eth/tron/: address.rs
mm2src/coins/eth/web3_transport/: http_transport.rs  mod.rs  websocket_transport.rs
mm2src/coins/hd_wallet/: account_ops.rs  address_ops.rs  coin_ops.rs  confirm_address.rs  errors.rs  mod.rs  pubkey.rs  wallet_ops.rs  withdraw_ops.rs
mm2src/coins/hd_wallet/storage/: mod.rs  sqlite_storage.rs  wasm_storage.rs
mm2src/coins/lightning/: ln_errors.rs  ln_events.rs  ln_filesystem_persister.rs  ln_p2p.rs  ln_platform.rs  ln_serialization.rs  ln_sql.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/nft/storage/: mod.rs  sql_storage.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  rpc_clients.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  consolidate_utxos.rs  fetch_utxos.rs  get_current_mtp.rs  get_enabled_coins.rs  get_estimated_fees.rs  get_gas_priority_fees.rs  get_new_address.rs  hd_account_balance_rpc_error.rs  init_account_balance.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs  mod.rs  offline_keys.rs
mm2src/coins/rpc_command/lightning/: close_channel.rs  connect_to_node.rs  generate_invoice.rs  get_channel_details.rs  get_claimable_balances.rs  get_payment_details.rs  list_channels.rs  list_payments_by_filter.rs  open_channel.rs  send_payment.rs  trusted_nodes.rs  update_channel.rs
mm2src/coins/rpc_command/tendermint/: staking.rs
mm2src/coins/solana/: mod.rs  solana_coin.rs  solana_tests.rs  solana_token.rs  spl.rs  spl_tests.rs
mm2src/coins/tendermint/: tendermint_balance_events.rs  tendermint_coin.rs  tendermint_token.rs  tendermint_tx_history_v2.rs  wallet_connect.rs
mm2src/coins/tendermint/ibc/: transfer_v1.rs
mm2src/coins/tendermint/rpc/: tendermint_native_rpc.rs  tendermint_wasm_rpc.rs
mm2src/coins/tx_history_storage/: mod.rs  sql_tx_history_storage_v2.rs
mm2src/coins/tx_history_storage/wasm/: tx_history_storage_v1.rs  tx_history_storage_v2.rs
mm2src/coins/utxo/: bch.rs  bchd_grpc.rs  qtum.rs  qtum_delegation.rs  rpc_clients.rs  slp.rs  tx_history_events.rs  utxo_balance_events.rs  utxo_common.rs  utxo_common_tests.rs  utxo_hd_wallet.rs  utxo_standard.rs  utxo_tests.rs  utxo_tx_history_v2.rs  utxo_withdraw.rs  wallet_connect.rs
mm2src/coins/utxo/tx_cache/: fs_tx_cache.rs
mm2src/coins/utxo/utxo_block_header_storage/: mod.rs  sql_block_header_storage.rs
mm2src/coins/utxo/utxo_builder/: mod.rs  utxo_arc_builder.rs  utxo_coin_builder.rs  utxo_conf_builder.rs
mm2src/coins/utxo/utxo_common/: utxo_tx_history_v2_common.rs
mm2src/coins/utxo_signer/: Cargo.toml
mm2src/coins/utxo_signer/src/: lib.rs  with_key_pair.rs  with_trezor.rs
mm2src/coins/z_coin/: change_notes.rs  change_tracker.rs  storage.rs  tx_history_events.rs  z_balance_streaming.rs  z_coin_errors.rs  z_coin_native_tests.rs  z_htlc.rs  z_rpc.rs  z_tx_history.rs  z_unit_tests.rs
mm2src/coins/z_coin/tx_streaming_tests/: native.rs  wasm.rs
mm2src/coins_activation/: Cargo.toml
mm2src/coins_activation/src/: bch_with_tokens_activation.rs  context.rs  erc20_token_activation.rs  eth_with_token_activation.rs  init_erc20_token_activation.rs  init_token.rs  lib.rs  lightning_activation.rs  platform_coin_with_tokens.rs  prelude.rs  sia_coin_activation.rs  slp_token_activation.rs  solana_token_activation.rs  solana_with_assets.rs  solana_with_tokens_activation.rs  tendermint_token_activation.rs  tendermint_with_assets_activation.rs  token.rs  z_coin_activation.rs
mm2src/coins_activation/src/l2/: init_l2.rs  mod.rs
mm2src/coins_activation/src/standalone_coin/: init_standalone_coin.rs  mod.rs
mm2src/coins_activation/src/utxo_activation/: common_impl.rs  init_bch_activation.rs  init_qtum_activation.rs  init_utxo_standard_activation.rs  init_utxo_standard_activation_error.rs  mod.rs
mm2src/mm2_bin_lib/: Cargo.toml  build.rs
mm2src/mm2_bin_lib/src/: mm2_native_lib.rs  mm2_wasm_lib.rs
mm2src/mm2_bitcoin/chain/: Cargo.toml
mm2src/mm2_bitcoin/chain/src/: block_header.rs  lib.rs  transaction.rs
mm2src/mm2_main/: Cargo.toml
mm2src/mm2_main/src/: database.rs  heartbeat_event.rs  lp_healthcheck.rs  lp_message_service.rs  lp_native_dex.rs  lp_network.rs  lp_ordermatch.rs  lp_stats.rs  lp_swap.rs  lp_wallet.rs  lr_swap.rs  mm2.rs  ordermatch_tests.rs  rpc.rs  wasm_tests.rs
mm2src/mm2_main/src/database/: my_lr_swaps.rs  my_orders.rs  my_swaps.rs  stats_swaps.rs
mm2src/mm2_main/src/for_tests/: recreate_maker_swap_maker_expected.json  recreate_maker_swap_maker_payment_wait_confirm_failed_maker_expected.json  recreate_taker_swap_taker_expected.json  recreate_taker_swap_taker_payment_wait_confirm_failed_taker_expected.json
mm2src/mm2_main/src/lp_init/: init_hw.rs  init_metamask.rs
mm2src/mm2_main/src/lp_ordermatch/: best_orders.rs  lp_bot.rs  my_orders_storage.rs  new_protocol.rs  order_events.rs  order_requests_tracker.rs  (+3 more)
mm2src/mm2_main/tests/: docker_tests_main.rs  docker_tests_sia_unique.rs  feature_gate_for_tests.rs  mm2_tests_main.rs
mm2src/trading_api/: Cargo.toml
mm2src/trading_api/src/: one_inch_api.rs
(+319 files in other folders)
